# owncam

./: README.md  pyproject.toml  setting.json
owncam/: __main__.py
tests/: test_owncam.py
