[tool.poetry]
name = "owncam"
version = "0.1.0"
description = ""
authors = ["colkey <colinakey@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
opencv-contrib-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
owncam = "owncam.__main__:main"
